# advent-of-code-2022

./: .ocamlformat  LICENSE.md  README.md  aoc2022.opam  dune-project
aoc2022/: dune
day1/: day1.ml  dune
day2/: day2.ml  dune
day3/: day3.ml  dune
day4/: day4.ml  dune
day5/: day5.ml  dune
utils/: utils.ml
